[project]
name = "cdn-ip-probe"
version = "0.1.0"
description = "Local CDN edge IP probing tool with a Vue WebUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
